fixed navbar spacing

--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,10 @@
     padding: 0 50px;
 }
 
-#navbar__logo{
-    
+#navbar__logo{ /* Gg logo */
+    display: flex;
+    height: 50%;
+    padding: 20px 50px;
 }
 /*
 #navbar__logo{
@@ -64,21 +66,23 @@
     height: 80px;
 }
 
-.navbar__links {
+.navbar__links { /* Home, About, Project, Podcast */
     color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
     text-decoration: none;
     padding: 0 1rem;
+    width: 100%;
     height: 100%;
 }
 
-.navbar__btn {
+.navbar__btn { /* Github button */
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
+    padding: 0 2rem;
 }
 
 .button {
